# mobileSSI

./: CMakeLists.txt  README.md  index.html  params.json
android/: AndroidManifest.xml
assets/: androidSensors.pipeline
core/: CMakeLists.txt
core/include/: SSI_Debug.h  SSI_Tools.h  ssi.h  ssistdMinMaxWrapper.h
core/include/base/: Factory.h  IWindow.h
core/include/event/: IESelect.h
core/include/graphic/: Canvas.h  Monitor.h  Window.h
core/include/model/: Annotation.h
core/source/base/: Factory.cpp
core/source/event/: IESelect.cpp
core/source/model/: ModelTools.cpp
core/tools/: CMakeLists.txt
core/tools/vadanno/: CMakeLists.txt  MainAnno.cpp
core/tools/xmlpipe/: CMakeLists.txt
pipes/: eventsender.pipeline  fake_signal.pipeline
plugins/: CMakeLists.txt
plugins/accFeatures/: CMakeLists.txt
plugins/accFeatures/include/: MathTools.h  SearchFeaturesGaze.h  SearchFeaturesHead.h  SearchFeaturesPupil.h  StreamTransformer.h  ssiaccfeatures.h  ssisearchfeatures.h
plugins/accFeatures/source/: ExportMain.cpp  MathTools.cpp  SearchFeaturesGaze.cpp  SearchFeaturesHead.cpp  SearchFeaturesPupil.cpp  StreamTransformer.cpp
plugins/androidJavaSensors/: CMakeLists.txt
plugins/androidJavaSensors/include/: AndroidJavaSensorChannels.h  AndroidJavaSensors.h  androidjavasensor.h  ssiandroidjavasensors.h
plugins/androidJavaSensors/pipes/: sensor.pipeline  websocket_empty.pipeline
plugins/androidJavaSensors/source/: AndroidJavaSensors.cpp  ExportMain.cpp  androidjavasensor.cpp
plugins/androidSensors/: CMakeLists.txt
plugins/androidSensors/include/: AndroidMessage.h  AndroidSensors.h  androidsensorchannels.h  definitions.hpp  ssiandroidsensors.h
plugins/androidSensors/pipes/: androidSensors.pipeline
plugins/androidSensors/source/: AndroidSensors.cpp  ExportMain.cpp
plugins/androidSensors/test/: CMakeLists.txt  Main.cpp
plugins/androidSensors/tools/: CMakeLists.txt
plugins/androidSensors/tools (Kopie 1)/: CMakeLists.txt
plugins/audio/: CMakeLists.txt
plugins/audio/include/: AudioPortaudioPlayer.h
plugins/audio/source/: AudioPortaudioPlayer.cpp
plugins/beaconScanner/: CMakeLists.txt  README
plugins/beaconScanner/include/: MyBeaconScanner.h  ssibeaconScanner.h
plugins/beaconScanner/pipes/: beaconScanner.pipeline
plugins/beaconScanner/source/: ExportMain.cpp  MyBeaconScanner.cpp
plugins/beaconScanner/test/: CMakeLists.txt  Main.cpp  MyEventListener.cpp
plugins/dlibSvm/: CMakeLists.txt
plugins/dlibSvm/include/: DlibSVM.h  ssidlibsvm.h
plugins/dlibSvm/source/: DlibSVM.cpp  ExportMain.cpp  empirical_kernel_map_ex.cpp
plugins/event/include/: XMLEventHelper.h
plugins/event/source/: FixationEventSender.cpp  TheEventBoard.cpp  ThresEventSender.cpp  XMLEventHelper.cpp  XMLEventSender.cpp  ZeroEventSender.cpp
plugins/eventTimeWarp/: CMakeLists.txt
plugins/eventTimeWarp/include/: EventTimeWarp.h  ssieventtimewarp.h
plugins/eventTimeWarp/pipes/: button.events  websocket_empty.pipeline
plugins/eventTimeWarp/source/: EventTimeWarp.cpp  ExportMain.cpp
plugins/eventserializer/: CMakeLists.txt
plugins/eventserializer/include/: DimensionSelector.h  ESListener.h  EventSerializer.h  ssieventserializer.h
plugins/eventserializer/source/: DimensionSelector.cpp  ESListener.cpp  EventSerializer.cpp  ExportMain.cpp
plugins/fastDTW/: CMakeLists.txt
plugins/fastDTW/source/: SSI_FastDTW.cpp
plugins/fftw-android/: CMakeLists.txt
plugins/fftw-android/include/: FFTWfeat.h  ssifftw-android.h
plugins/fftw-android/source/: ExportMain.cpp  FFTWfeat.cpp
plugins/frame/source/: Provider.cpp  Selector.cpp  TheFramework.cpp
plugins/generic_serial/: CMakeLists.txt
plugins/generic_serial/include/: GenericSerial.h  Serial.h
plugins/generic_serial/pipes/: genericSerial.pipeline
plugins/generic_serial/source/: ExportMain.cpp  GenericSerial.cpp  Serial.cpp
plugins/image/: CMakeLists.txt
plugins/image/include/: CVLuminance.h  ssiimage.h
plugins/image/source/: CVLuminance.cpp  ExportMain.cpp
plugins/ioput/include/: SocketEventReader.h
plugins/ioput/source/: FileAnnotationWriter.cpp  SocketEventReader.cpp
plugins/liblinear/include/: LibLinear.h
plugins/liblinear/source/: LibLinear.cpp
plugins/liblinear/test/: Main.cpp
plugins/model/: CMakeLists.txt
plugins/model/MlpXml/: MlpXmlTrain.cpp
plugins/model/include/: Dollar$1.h  ssimodel.h
plugins/model/source/: DecisionSmoother.cpp  ExportMain.cpp  Relief.cpp  SimpleKNN.cpp
plugins/mqtt/: CMakeLists.txt  README
plugins/mqtt/include/: mqtt.h  mqttclient.h  mqttserver.h  ssimqtt.h
plugins/mqtt/source/: ExportMain.cpp  mqtt.cpp  mqttclient.cpp  mqttserver.cpp
plugins/openface/: CMakeLists.txt
plugins/openface/include/: Openface.h  OpenfaceHelper.h  OpenfacePainter.h
plugins/openface/pipes/: openface.pipeline
plugins/openface/source/: ExportMain.cpp  Openface.cpp  OpenfaceHelper.cpp  OpenfacePainter.cpp
plugins/opensmile/source/: OSTransformFFT.cpp
plugins/opensmilewrapper/: CMakeLists.txt
plugins/opensmilewrapper/include/: ssiopensmilewrapper.h
plugins/opensmilewrapper/source/: ExportMain.cpp
plugins/python/: CMakeLists.txt
plugins/python/source/: PythonHelper.cpp
plugins/sensingtex/pipes/: sensingtex_linux.pipeline  sensingtex_pressuremat.stream~
plugins/signal/: CMakeLists.txt
plugins/signal/include/: Bundle.h
plugins/signal/source/: Bundle.cpp  Derivative.cpp  Functionals.cpp  Integral.cpp  Multiply.cpp  MvgMinMax.cpp
plugins/ssjSensor/: CMakeLists.txt
plugins/ssjbridge/: CMakeLists.txt
plugins/stimuli/: CMakeLists.txt
plugins/tensorflow/: CMakeLists.txt
plugins/tensorflow/include/: Tensorflow.h  ssitensorflow.h
plugins/tensorflow/include/google/tensorflow/tensorflow/cc/ops/: array_ops.h  math_ops.h
plugins/tensorflow/include/google/tensorflow/tensorflow/core/protobuf/: config.pb.h
plugins/tensorflow/pipe/: fftw.pipeline
plugins/tensorflow/source/: ExportMain.cpp  Tensorflow.cpp
plugins/tensorflow/test_files/: frozen_graph.pb
plugins/vectorfusionMobile/: CMakeLists.txt
plugins/xmpp/: CMakeLists.txt
(+73 files in other folders)
